# gpt-training-sandbox

./: .gitignore  AGENTS.md  DOLT_REMOTE.md  LICENSE  README.md  manifest  pyproject.toml
.beads/: beads.jsonl  config.yaml  interactions.jsonl  metadata.json
configs/: smoke.yaml
data/fixtures/: README.md  tiny.txt
plans/: pre-training.md
scripts/: __init__.py  _common.py  chat.py  eval_base.py  eval_chat.py  eval_tokenizer.py  pretrain.py  sample.py  train_sft.py  train_tokenizer.py  web_chat.py
src/scratch_llm/: __init__.py  _validation.py  attention.py  checkpoint.py  config.py  data.py  generation.py  model.py  optim.py  run.py  tokenizer.py  tracking.py  training.py  utils.py
tests/: __init__.py  test_attention.py  test_checkpoint.py  test_config.py  test_config_loading.py  test_data.py  test_generation.py  test_model.py  test_optim.py  test_package_layout.py  test_run.py  test_scripts.py  test_tokenizer.py  test_tracking.py  test_training.py  test_utils.py
